css/main.css
/* Fonts */

@import url(http://fonts.googleapis.com/css?family=Lato);

html, button, input, select, textarea, h1, h2, h3, p
.pure-g [class *= "pure-u"] {
    font-family: Lato, sans-serif;
    font-weight: 400;
}

h1, h2 {
	letter-spacing: -.10em;
	width:100%;
}

p {
	letter-spacing: .01em;
}
li {
	letter-spacing: .01em;
    list-style: none;
    padding-bottom: .5em;
}
ul {
    list-style: none;
}

/* Centering text */
.center {
	text-align: center!important;
}

/* Vertical centering nonsense for bubble text */
.text {
	position: relative;
	height: 250px;
	margin: 50vh auto 0;
	transform: translateY(-50%);
}

/* Background */
.bg-darker {
	background-color: #dbd6f5;
}

/**********************
    Menu
**********************/

/* This only works on desktop atm */
.menu {
	background:#776fab;
	/*rgb(150, 69, 150)*/
	padding-right:10px;
}

/* Makes the menu-items go right */
.menu ul{
	float:right;
    /*padding-top: 6px;*/
}

.logo {
    display: inline-block;
    white-space: nowrap;
    vertical-align: middle;
    *display: inline;
    margin-left: 8px;
}

/* actual logo ltr pl0x */
.white {
	color:white!important;
}

.purple {
    background-color:#dbd6f5!important;
}

.menu > img {
    object-fit: contain;
    max-height: 100%;
}

.pure-menu-link:hover{
	background-color: #847ac6;
	/* Other color options: #897fc6, #7f75ba, #7c73b5, #8b81ca */
	/*rgba(219, 156, 228, 0.89)*/
}

.circle {
	border-radius: 50%;
	width: 250px!important;
	height: 250px!important;
}

.top {
	padding-top: 51px;
}

/* Round-edged boxes */

/* Events page */
.round {
    background-color: white;
    border-radius: .8em;
    padding: 1em;
    margin: 2em;
    margin-top: 0;
}

/* Other pages */
.round-w {
    width: 100%;
	background-color: white;
	border-radius: .8em;
	padding: 1em;
	margin: 2em;
	margin-top: 0;
}

.round-p {
	width: 100%;
	background-color: #dbd6f5;
	border-radius: .8em;
	padding: 1em;
	margin: 2em;
	margin-top: 0;
}

.flippy {
	width: 250px;
	height: 250px!important;
}

/* Responsive images */
.responsive-img {
	margin: 0 auto;
	max-width: 100%;
	height: auto;
}

.pure-form input[readonly]{
	background-color: #fff;
}

